--- a/index.html
+++ b/index.html
@@ -2,190 +2,245 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta-name="viewport" content="width=device-width,initial-scale=1" />
   <title>Logic Runner | Propositional Logic Game</title>
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
   <div class="bg-animated" aria-hidden="true"></div>
 
-  <header class="topbar" role="banner">
+  <header class="topbar">
     <div class="topbar-left">
-      <button id="hamburger" class="hamburger" aria-label="Open menu" type="button"><i class="fas fa-bars"></i></button>
-      <div class="logo" aria-hidden="false"><i class="fas fa-brain"></i><span class="brand">Logic Runner</span></div>
+      <button id="hamburger" class="hamburger" aria-label="Open menu" type="button">
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="logo"><i class="fas fa-brain"></i><span class="brand">Logic Runner</span></div>
     </div>
 
-    <!-- topnav removed from header (nav items are now inside the hamburger dropdown) -->
-    <nav class="topnav" id="topnav" aria-label="Main navigation" style="display:none;"></nav>
+    <nav class="topnav" id="topnav" style="display:none;"></nav>
 
     <div class="topbar-right">
-      <button id="sound-toggle" class="icon-btn" title="Toggle sound" type="button"><i class="fas fa-volume-up"></i></button>
-      <button id="open-leaderboard" class="icon-btn" title="Leaderboard" type="button"><i class="fas fa-trophy"></i></button>
+      <button id="sound-toggle" class="icon-btn" title="Toggle sound"><i class="fas fa-volume-up"></i></button>
+      <button id="open-leaderboard" class="icon-btn" title="Leaderboard"><i class="fas fa-trophy"></i></button>
     </div>
   </header>
 
-  <!-- small dropdown menu (appears under the hamburger) -->
-  <div id="hamburger-menu" class="hamburger-menu" aria-hidden="true" style="display:none;">
-    <button class="menu-item" data-target="home" type="button">Play</button>
-    <button class="menu-item" data-target="tutorial-panel" type="button">Tutorial</button>
-    <button class="menu-item" data-target="about-panel" type="button">About</button>
-    <button class="menu-item" data-target="leaderboard-panel" type="button">Leaderboard</button>
+  <div id="hamburger-menu" class="hamburger-menu" style="display:none;">
+    <button class="menu-item" data-target="home">Play</button>
+    <button class="menu-item" data-target="tutorial-panel">Tutorial</button>
+    <button class="menu-item" data-target="about-panel">About</button>
+    <button class="menu-item" data-target="leaderboard-panel">Leaderboard</button>
   </div>
 
   <main class="container" id="main-container">
-    <!-- HOME / PLAY -->
-    <section id="home" class="panel active-panel" aria-label="Home">
-      <div class="hero" id="hero-section">
+
+    <!-- HOME -->
+    <section id="home" class="panel active-panel">
+      <div class="hero">
         <div class="hero-left">
           <h1 class="shimmer">Logic Runner</h1>
-          <p class="subtitle">Test your wits and master propositional logic through gameplay.</p>
+          <p class="subtitle">Master propositional logic through fast, interactive gameplay.</p>
 
-          <div class="topic-info" aria-hidden="false">
-            <div class="topic-title"><i class="fas fa-lightbulb"></i> Propositional Logic — Quick idea</div>
-            <p>Propositional logic deals with statements that are either true or false. Practice using connectives like AND, OR, NOT and IMPLIES through short interactive challenges.</p>
+          <div class="topic-info">
+            <div class="topic-title"><i class="fas fa-lightbulb"></i> What is Propositional Logic?</div>
+            <p>
+              Propositional logic studies statements that are either true or false.
+              Using connectives such as <strong>AND, OR, NOT,</strong> and <strong>IMPLIES</strong>,
+              we analyze how complex expressions behave. Logic Runner turns these ideas into
+              short, fun challenges designed to strengthen your reasoning skills.
+            </p>
           </div>
 
-          <!-- Big Cards layout (two by two) -->
-          <div class="menu-cards" id="menu-cards">
+          <!-- MENU CARDS -->
+          <div class="menu-cards">
             <div class="big-card-row">
-              <button class="big-card" data-target="play" id="card-play" type="button">
+              <button class="big-card" data-target="play">
                 <div class="card-icon-wrap"><i class="fas fa-play card-icon"></i></div>
-                <div class="card-body"><span class="card-title">PLAY</span><small>Jump into a randomized run</small></div>
+                <div class="card-body"><span class="card-title">PLAY</span>
+                  <small>Start a randomized challenge run</small></div>
               </button>
 
-              <button class="big-card" data-target="tutorial-panel" id="card-tut" type="button">
+              <button class="big-card" data-target="tutorial-panel">
                 <div class="card-icon-wrap"><i class="fas fa-book card-icon"></i></div>
-                <div class="card-body"><span class="card-title">TUTORIAL</span><small>Modes, rules & tips</small></div>
+                <div class="card-body"><span class="card-title">TUTORIAL</span>
+                  <small>Learn rules & logic basics</small></div>
               </button>
             </div>
 
             <div class="big-card-row">
-              <button class="big-card" data-target="about-panel" id="card-about" type="button">
-                <div class="card-icon-wrap"><i class="fas fa-users card-icon"></i></div>
-                <div class="card-body"><span class="card-title">ABOUT</span><small>What the game teaches</small></div>
+              <button class="big-card" data-target="about-panel">
+                <div class="card-icon-wrap"><i class="fas fa-graduation-cap card-icon"></i></div>
+                <div class="card-body"><span class="card-title">ABOUT</span>
+                  <small>What the game teaches</small></div>
               </button>
 
-              <button class="big-card" data-target="leaderboard-panel" id="card-leader" type="button">
+              <button class="big-card" data-target="leaderboard-panel">
                 <div class="card-icon-wrap"><i class="fas fa-trophy card-icon"></i></div>
-                <div class="card-body"><span class="card-title">LEADERBOARD</span><small>Top local runs</small></div>
+                <div class="card-body"><span class="card-title">LEADERBOARD</span>
+                  <small>Your top runs</small></div>
               </button>
             </div>
           </div>
 
           <div class="meta-row">
-            <span class="meta-pill">Modern</span>
-            <span class="meta-pill">Minimal</span>
-            <span class="meta-pill">Fun</span>
+            <span class="meta-pill">BSIT</span>
+            <span class="meta-pill">BLOCK</span>
+            <span class="meta-pill">2N</span>
           </div>
         </div>
 
         <aside class="hero-right">
           <div class="card" id="settings-card">
             <div class="card-title"><i class="fas fa-sliders-h"></i> GAME SETTINGS</div>
+
             <div class="settings-row">
               <div class="settings-label">DIFFICULTY</div>
               <div class="settings-choices" id="difficulty-select">
-                <div class="settings-card active" data-value="easy" role="button" tabindex="0">Beginner</div>
-                <div class="settings-card" data-value="medium" role="button" tabindex="0">Intermediate</div>
-                <div class="settings-card" data-value="hard" role="button" tabindex="0">Expert</div>
+                <div class="settings-card active" data-value="easy">Beginner</div>
+                <div class="settings-card" data-value="medium">Intermediate</div>
+                <div class="settings-card" data-value="hard">Expert</div>
               </div>
             </div>
 
             <div class="settings-row">
               <div class="settings-label">MODE</div>
               <div class="settings-choices" id="mode-select">
-                <div class="settings-card active" data-value="classic" role="button" tabindex="0">Classic</div>
-                <div class="settings-card" data-value="timed" role="button" tabindex="0">Timed</div>
+                <div class="settings-card active" data-value="classic">Classic</div>
+                <div class="settings-card" data-value="timed">Timed</div>
               </div>
             </div>
 
-            <div style="margin-top:12px;">
-              <!-- redesigned start button -->
-              <button id="start-game" class="btn-start" type="button">Start Game</button>
-            </div>
+            <button id="start-game" class="btn-start">Start Game</button>
           </div>
 
-          <div class="card small-card" id="help-card">
+          <div class="card small-card">
             <div class="card-title"><i class="fas fa-info-circle"></i> Quick Tips</div>
             <ol class="tips">
-              <li>Drag operator names to symbols, or answer prompts when shown.</li>
-              <li>Timed mode starts when you press Start. Timer will appear in-game only.</li>
-              <li>Use Retry/Quit while playing to control runs.</li>
+              <li>Drag operator names or answer prompts when shown.</li>
+              <li>Timer appears only during Timed mode.</li>
+              <li>Use Retry or Quit to restart rounds anytime.</li>
             </ol>
           </div>
         </aside>
       </div>
 
-      <section id="game-area" class="game-area" aria-live="polite"></section>
+      <section id="game-area" class="game-area"></section>
     </section>
 
     <!-- TUTORIAL -->
     <section id="tutorial-panel" class="panel">
       <div class="card">
         <div class="card-title"><i class="fas fa-book"></i> Tutorial</div>
+
         <div class="topic-info">
-          <div class="topic-title"><i class="fas fa-project-diagram"></i> Connectors & Semantics</div>
-          <p><strong>AND (∧)</strong> — true only when both p and q are true.<br>
-             <strong>OR (∨)</strong> — true when at least one of p or q is true.<br>
-             <strong>NOT (¬)</strong> — inverts truth.<br>
-             <strong>IMPLIES (→)</strong> — false only when p is true and q is false.</p>
+          <div class="topic-title"><i class="fas fa-project-diagram"></i> Logical Connectives</div>
+          <p>
+            <strong>AND (∧)</strong>: True only if both p and q are true.<br>
+            <strong>OR (∨)</strong>: True if at least one of p or q is true.<br>
+            <strong>NOT (¬)</strong>: Inverts the truth value.<br>
+            <strong>IMPLIES (→)</strong>: False only if p is true and q is false.
+          </p>
         </div>
 
         <h3>How to Play</h3>
         <ol class="tutorial-list">
-          <li>Choose difficulty and mode, then press Start.</li>
-          <li>Question types: symbol match, sentence fill, truth-table tasks (drag / mcq / type / dropdown / partial).</li>
-          <li>Correct answers increase score. Wrong answers lose a life. Run ends at 0 lives.</li>
-          <li>In Timed mode, each question has a countdown — answer before time runs out.</li>
+          <li>Select a difficulty level and game mode.</li>
+          <li>Solve tasks like symbol matching, sentence translation, and truth-table filling.</li>
+          <li>Correct answers increase your score; wrong answers cost one life.</li>
+          <li>In Timed mode, answer before the countdown ends.</li>
         </ol>
       </div>
     </section>
 
-    <!-- ABOUT -->
+    <!-- ABOUT (Expanded & Informative) -->
     <section id="about-panel" class="panel">
       <div class="card about-card">
-        <div class="card-title"><i class="fas fa-users"></i> About</div>
+        <div class="card-title"><i class="fas fa-graduation-cap"></i> About Logic Runner</div>
+
         <div class="topic-info">
-          <div class="topic-title"><i class="fas fa-graduation-cap"></i> Learning Goals</div>
-          <p>Logic Runner is a practice tool to build fluency in propositional logic: translating sentences into logical operators, reading truth tables, and applying logical reasoning under mild time pressure.</p>
+          <div class="topic-title"><i class="fas fa-brain"></i> What You’ll Learn</div>
+          <p>
+            Logic Runner is designed to build skill and confidence in propositional logic. You’ll learn to:
+          </p>
+
+          <ul>
+            <li>Translate English statements into logical expressions.</li>
+            <li>Interpret and complete truth tables.</li>
+            <li>Recognize common logical patterns and structures.</li>
+            <li>Evaluate compound expressions step-by-step.</li>
+            <li>Apply reasoning quickly under mild time pressure.</li>
+          </ul>
         </div>
-        <p>Designed for students. Use it often and the patterns will stick.</p>
+
+        <div class="topic-info">
+          <div class="topic-title"><i class="fas fa-list-check"></i> Example Problems</div>
+          <ul>
+            <li>Translate: “If it rains, the ground is wet.” → p → q</li>
+            <li>Fill truth table: p = T, q = F → p ∧ q = F</li>
+            <li>Evaluate: ¬(p ∨ q) when p = F, q = F → True</li>
+            <li>Match: “not p” → ¬p</li>
+          </ul>
+        </div>
+
+        <div class="topic-info">
+          <div class="topic-title"><i class="fas fa-star"></i> Features</div>
+          <ul>
+            <li>Adaptive difficulty progression.</li>
+            <li>Classic and timed challenge modes.</li>
+            <li>Multiple logic task formats.</li>
+            <li>Local leaderboard tracking.</li>
+            <li>Clean, minimal, student-friendly design.</li>
+          </ul>
+        </div>
+
+        <div class="topic-info">
+          <div class="topic-title"><i class="fas fa-road"></i> Future Improvements</div>
+          <ul>
+            <li>Support for ↔, NAND, NOR, XOR operators.</li>
+            <li>First-order logic (∀, ∃) mode.</li>
+            <li>Online global leaderboard.</li>
+            <li>Detailed performance analytics.</li>
+          </ul>
+        </div>
       </div>
     </section>
 
     <!-- LEADERBOARD -->
     <section id="leaderboard-panel" class="panel">
       <div class="card">
-        <div class="card-title"><i class="fas fa-trophy"></i> Leaderboard (local)</div>
+        <div class="card-title"><i class="fas fa-trophy"></i> Leaderboard (Local)</div>
 
         <div class="topic-info">
           <div class="topic-title"><i class="fas fa-clipboard-list"></i> Tip of the Round</div>
-          <p id="topic-tip">Practice negation and small subexpressions — simplify step-by-step.</p>
+          <p id="topic-tip">Practice breaking down subexpressions before solving the whole statement.</p>
         </div>
 
-        <div style="display:flex;gap:.5rem;align-items:center;margin-bottom:8px;">
-          <input id="player-name" placeholder="Your name" class="name-input" />
-          <button id="clear-leader" class="btn btn-secondary" type="button">Clear</button>
+        <div style="display:flex; gap:.5rem; align-items:center; margin-bottom:8px;">
+          <input id="player-name" placeholder="Your name" class="name-input">
+          <button id="clear-leader" class="btn btn-secondary">Clear</button>
         </div>
 
-        <ol id="leader-list" aria-live="polite"></ol>
+        <ol id="leader-list"></ol>
       </div>
     </section>
+
   </main>
 
-  <!-- Floating HUD (top-right, shown only in-game) -->
-  <div id="floating-ui" class="floating-ui" aria-hidden="true" style="display:none;">
+  <!-- FLOATING HUD -->
+  <div id="floating-ui" class="floating-ui" style="display:none;">
     <div class="floating-top">
-      <div class="status-indicator" title="Level"><i class="fas fa-layer-group"></i> <span id="stat-level">0/0</span></div>
-      <div class="status-indicator" title="Score"><i class="fas fa-star"></i> <span id="stat-score">0</span></div>
-      <div class="status-indicator" title="Lives"><i class="fas fa-heart"></i> <span id="stat-lives">3</span></div>
-      <div id="floating-timer" class="status-indicator" style="display:none;" title="Timer"><i class="fas fa-stopwatch"></i> <span id="timer-value">0</span>s</div>
+      <div class="status-indicator"><i class="fas fa-layer-group"></i> <span id="stat-level">0/0</span></div>
+      <div class="status-indicator"><i class="fas fa-star"></i> <span id="stat-score">0</span></div>
+      <div class="status-indicator"><i class="fas fa-heart"></i> <span id="stat-lives">3</span></div>
+      <div id="floating-timer" class="status-indicator" style="display:none;"><i class="fas fa-stopwatch"></i> <span id="timer-value">0</span>s</div>
     </div>
+
     <div class="floating-actions">
-      <button id="btn-retry" class="btn floating-btn" title="Retry" type="button"><i class="fas fa-redo"></i> Retry</button>
-      <button id="btn-quit" class="btn floating-btn" title="Quit" type="button"><i class="fas fa-sign-out-alt"></i> Quit</button>
+      <button id="btn-retry" class="btn floating-btn"><i class="fas fa-redo"></i> Retry</button>
+      <button id="btn-quit" class="btn floating-btn"><i class="fas fa-sign-out-alt"></i> Quit</button>
     </div>
   </div>
 
